# FirstGameProject

./: .gitignore  CMakeLists.txt  README.md
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  MathUtil.h  Object.h  World.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  MathUtil.cpp  Object.cpp  World.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/src/: LightYearsGame.cpp  LightYearsGame.h
LightYearsGame/src/gameFramework/: GameApplication.cpp
