
add_executable (${LIGHT_YEARS_GAME_TARGET_NAME}
	${CMAKE_CURRENT_SOURCE_DIR}/src/gameFramework/GameApplication.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/include/gameFramework/GameApplication.h
)
target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC 
	"./include"
)
if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET ${LIGHT_YEARS_GAME_TARGET_NAME} PROPERTY CXX_STANDARD 20)
endif()

target_link_libraries(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC ${LIGHT_YEARS_ENGINE_TARGET_NAME})

function(CopyLibDirToTarget LIB_NAME TARGET_NAME)
	add_custom_command(
		TARGET ${TARGET_NAME}
		POST_BUILD
		COMMAND
		${CMAKE_COMMAND} -E copy_directory
		$<TARGET_FILE_DIR:${LIB_NAME}>
		$<TARGET_FILE_DIR:${TARGET_NAME}>
	)
endfunction()

CopyLibtoTarget(${LIGHT_YEARS_ENGINE_TARGET_NAME} ${LIGHT_YEARS_GAME_TARGET_NAME})

set(RESROUCE_FOLDER_NAME "assets")
set(RESOURCE_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${RESROUCE_FOLDER_NAME}")
add_custom_command(
	TARGET ${LIGHT_YEARS_GAME_TARGET_NAME}
	POST_BUILD
	COMMAND
	${CMAKE_COMMAND} -E copy_directory
	${RESOURCE_SRC_DIR}
	$<TARGET_FILE_DIR:${LIGHT_YEARS_GAME_TARGET_NAME}>/${RESROUCE_FOLDER_NAME}
)
configure_file(
	${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
	"${CMAKE_CURRENT_SOURCE_DIR}/include/config.h" ESCAPE_QUOTES
)
